# phantom-pureapi

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
src/phantom_pureapi/: __init__.py  auth.py  exceptions.py  handlers.py  loggers.py  main.py  mixins.py  urls.py  utils.py
src/phantom_pureapi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/phantom_pureapi/templates/: default.html  error.html
