[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"


# Requirements

[dev-dependencies]
black = { version = "^21.6b0", python = "^3.10" }

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.html
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
